[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sar_project"
version = "0.1.0"
description = "SAR Project"
requires-python = ">=3.8"
authors = [
    {name = "Project Author"}
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["sar_project"]

